--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div class = "main-heading">
+        <h1>Welcome I am Laeeqah Esau</h1>
+        <h3>Get to know me better</h3>
+    </div>
     
+    <nav class = navbar>
+        <a class = links href="about.html">About Me</a>
+        <a class = links href="portfolio.html">Portfolio</a>
+        <a class = links href="testimonial.html">Testimonial</a>
+        <a class = links href="contact.html">Contact Me</a>
+    </nav>
+
 
     
 </body>
