--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class = "main-heading">
-        <h1>Welcome I am Laeeqah Esau</h1>
+        <h1>About</h1>
         <h3>Get to know me better</h3>
     </div>
 
@@ -20,10 +20,11 @@
         <a class = links href="contact.html">Contact</a>
     </nav>
 
-    <div>
+    <div class = "profile">
         <h3>Hi I am Laeeqah Esau</h3>
         <img src="images/blue-background.png">
-        <p>I am Junior Developer</p>
+        <p>I am Junior Developer</p><br>
+        <p></p>
     </div>
 
     <footer class="footer-decor">
@@ -42,8 +43,6 @@
         </div>
 
     </footer>
-</body>
-</html>
     
 </body>
 </html>
