--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class = "main-heading">
-        <h1>Welcome I am Laeeqah Esau</h1>
+        <h1>Projects</h1>
         <h3>Get to know me better</h3>
     </div>
 
@@ -20,10 +20,7 @@
         <a class = links href="contact.html">Contact</a>
     </nav>
 
-    <div class = "quote">
-        <p>Code is the future and so are we</p>
-        <p>-Laeeqah</p>
-    </div>
+    
 
     <footer class="footer-decor">
 
