--- a/about.html
+++ b/about.html
@@ -24,7 +24,8 @@
         <h3>Hi I am Laeeqah Esau</h3>
         <img src="images/blue-background.png">
         <p>I am Junior Developer</p><br>
-        <p></p>
+        <p>I am hard working and keen on lewarning new things everyday<br>
+        Very creative</p>
     </div>
 
     <footer class="footer-decor">
