--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,13 @@
         <a class = links href="contact.html">Contact</a>
     </nav>
 
-    
+    <table class = "project">
+        <div class = "table-layout">
+            <th>HTML/CSS</th>
+            <th>JAVASCRIPT</th>
+            <th>PYTHON</th>
+            
+    </table>
 
     <footer class="footer-decor">
 
