--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    <div class = "main-heading">
+    <div class="main-heading">
         <h1>Welcome I am Laeeqah Esau</h1>
         <h3>Get to know me better</h3>
     </div>
 
-    <nav class = navbar>
-        <a class = links href="index.html">Home</a>
-        <a class = links href="about.html">About</a>
-        <a class = links href="portfolio.html">Portfolio</a>
-        <a class = links href="testimonial.html">Testimonial</a>
-        <a class = links href="contact.html">Contact</a>
+    <nav class="navbar">
+        <a class="links" href="index.html">Home</a>
+        <a class="links" href="about.html">About</a>
+        <a class="links" href="portfolio.html">Portfolio</a>
+        <a class="links" href="testimonial.html">Testimonial</a>
+        <a class="links" href="contact.html">Contact</a>
     </nav>
 
-    <div class = "quote">
-        <p>Code is the future and so are we</p>
-        <p>-Laeeqah</p>
-    </div>
+    <table>
+        <th>
+            <div class = "right-side">
+                <img class ="next-to-quote" src = "images/myprofile.jpg">
+            </div>
+        </th>
+        <th>
+            <div class="quote-border">
+                <div class="quote">
+                    <p>Code is the future and so are we</p>
+                    <p>-Laeeqah</p>
+                </div>
+            </div>
+        </th>
+    </table>
 
     <footer class="footer-decor">
 
@@ -35,6 +48,8 @@
                 <a href="portfolio.html">portfolio</a>
                 <a href="testimonial.html">testimonial</a>
                 <a href="contact.html">Contact</a>
+                <p>Cell number: 0637750536</p>
+                <p>Email Address: laeeqahesau@gmail.com</p>
             </p>
 
             <p>Laeeqah Esau &copy; 2020</p>
@@ -42,4 +57,5 @@
 
     </footer>
 </body>
+
 </html>
