--- a/about.html
+++ b/about.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    <div class = "main-heading">
+    <div class="main-heading">
         <h1>About</h1>
         <h3>Get to know me better</h3>
     </div>
 
-    <nav class = navbar>
-        <a class = links href="index.html">Home</a>
-        <a class = links href="about.html">About</a>
-        <a class = links href="portfolio.html">Portfolio</a>
-        <a class = links href="testimonial.html">Testimonial</a>
-        <a class = links href="contact.html">Contact</a>
+    <nav class="navbar">
+        <a class="links" href="index.html">Home</a>
+        <a class="links" href="about.html">About</a>
+        <a class="links" href="portfolio.html">Portfolio</a>
+        <a class="links" href="testimonial.html">Testimonial</a>
+        <a class="links" href="contact.html">Contact</a>
     </nav>
 
-    <div class = "profile">
+    <div class="profile">
         <h3>Hi I am Laeeqah Esau</h3>
-        <img src="images/blue-background.png">
-        <p>I am Junior Developer</p><br>
-        <p>I am hard working and keen on lewarning new things everyday<br>
-        Very creative</p>
+        <img class = "my-photo" src="images/myprofile.jpg">
+        <p>
+            <a href="mailto:someone@example.com"><img class="icon-links1" src="images/gmail-icon.png" /></a>
+            <a href="http://www.linkedin.com/in/laeeqah-esau-78467a200/."><img class="icon-links2" src="images/linkedin-icon.svg" /></a>
+            <a href="https://github.com/laeeqah"><img class="icon-links2" src="images/github-icon.png" /></a>
+        </p>
+
+        <p>I am a Junior Developer</p>
+
+        <p>I am currently at LifeChoices Academy. I am hard working and keen on learning new things everyday.<br> I have experience in HTML, CSS, JAVASCRIPT, STKINTER and PYTHON.</p>
+    </div>
+
+    <h4>RESUME</h4>
+    <div class="my-resume">
+        <iframe src=""></iframe>
     </div>
 
     <footer class="footer-decor">
@@ -38,12 +51,15 @@
                 <a href="portfolio.html">portfolio</a>
                 <a href="testimonial.html">testimonial</a>
                 <a href="contact.html">Contact</a>
+                <p>Cell number: 0637750536</p>
+                <p>Email Address: laeeqahesau@gmail.com</p>
             </p>
 
             <p>Laeeqah Esau &copy; 2020</p>
         </div>
 
     </footer>
-    
+
 </body>
+
 </html>
