--- a/testimonial.html
+++ b/testimonial.html
@@ -1,26 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <title>Testimonial</title>
     <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    <div class = "main-heading">
+    <div class="main-heading">
         <h1>Testimonial</h1>
         <h3>Get to know me better</h3>
     </div>
 
-    <nav class = navbar>
-        <a class = links href="index.html">Home</a>
-        <a class = links href="about.html">About</a>
-        <a class = links href="portfolio.html">Portfolio</a>
-        <a class = links href="testimonial.html">Testimonial</a>
-        <a class = links href="contact.html">Contact</a>
-    </nav>
+    <div>
+        <nav class="navbar">
+            <a class="links" href="index.html">Home</a>
+            <a class="links" href="about.html">About</a>
+            <a class="links" href="portfolio.html">Portfolio</a>
+            <a class="links" href="testimonial.html">Testimonial</a>
+            <a class="links" href="contact.html">Contact</a>
+        </nav>
+    </div>
 
-   
+    <div class="cards">
+        <div class="flip-inside-card">
+            <div class="flip-to-front">
+                <img class="person-photo" src="images/godwin-dzvapatsra.jpg" alt="person1">
+            </div>
+            <div class="flip-to-back">
+                <h1>Lecturer</h1>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="cards">
+        <div class="flip-inside-card">
+            <div class="flip-to-front">
+                <img class="person-photo" src="images/candice-amon.png" alt="person2">
+            </div>
+            <div class="flip-to-back">
+                <h1>Candice</h1>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="cards">
+        <div class="flip-inside-card">
+            <div class="flip-to-front">
+                <img class="person-photo" src="images/unnamed.jpg" alt="person3">
+            </div>
+            <div class="flip-to-back">
+                <h1>peer1</h1>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="cards">
+        <div class="flip-inside-card">
+            <div class="flip-to-front">
+                <img class="person-photo" src="images/unnamed.jpg" alt="person3">
+            </div>
+            <div class="flip-to-back">
+                <h1>peer1</h1>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="cards">
+        <div class="flip-inside-card">
+            <div class="flip-to-front">
+                <img class="person-photo" src="images/unnamed.jpg" alt="person3">
+            </div>
+            <div class="flip-to-back">
+                <h1>peer1</h1>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="cards">
+        <div class="flip-inside-card">
+            <div class="flip-to-front">
+                <img class="person-photo" src="images/unnamed.jpg" alt="person3">
+            </div>
+            <div class="flip-to-back">
+                <h1>peer1</h1>
+                <p></p>
+            </div>
+        </div>
+    </div>
 
     <footer class="footer-decor">
 
@@ -32,6 +101,8 @@
                 <a href="portfolio.html">portfolio</a>
                 <a href="testimonial.html">testimonial</a>
                 <a href="contact.html">Contact</a>
+                <p>Cell number: 0637750536</p>
+                <p>Email Address: laeeqahesau@gmail.com</p>
             </p>
 
             <p>Laeeqah Esau &copy; 2020</p>
@@ -39,7 +110,9 @@
 
     </footer>
 </body>
+
 </html>
-    
+
 </body>
+
 </html>
