--- a/about.html
+++ b/about.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
-    <title>Home</title>
+    <title>About</title>
     <link rel="stylesheet" href="main.css">
 </head>
 
+<!-- About page shows everything you nned to know about me -->
 <body>
     <div class="main-heading">
-        <h1>About</h1>
+        <h1>Things About Me</h1>
         <h3>Get to know me better</h3>
     </div>
 
@@ -25,21 +26,48 @@
     <div class="profile">
         <h3>Hi I am Laeeqah Esau</h3>
         <img class = "my-photo" src="images/myprofile.jpg">
-        <p>
-            <a href="mailto:someone@example.com"><img class="icon-links1" src="images/gmail-icon.png" /></a>
-            <a href="http://www.linkedin.com/in/laeeqah-esau-78467a200/."><img class="icon-links2" src="images/linkedin-icon.svg" /></a>
-            <a href="https://github.com/laeeqah"><img class="icon-links2" src="images/github-icon.png" /></a>
-        </p>
-
         <p>I am a Junior Developer</p>
 
-        <p>I am currently at LifeChoices Academy. I am hard working and keen on learning new things everyday.<br> I have experience in HTML, CSS, JAVASCRIPT, STKINTER and PYTHON.</p>
+        <p>I am a very pleasant and positive person who works well both independently as well as in a team.
+            I am keen on learning new things everyday and I am dedicated
+            and commited to anything that I am assigned to. I am very creative and love
+            working on the computer.<br> I grew up with computers and was always fascinated by it
+            Watching my brother code during ockdown sparked my interest even more.
+            I asked him to show me and right away I knew that was what I wanted to do.
+        </p>
+        <h4>Education</h4>
+        <p>Matric 2018 - Rocklands High School</p>
+        <h4>Working Experience</h4>
+        <p>Company: Parkhurst Primary School</p>
+        <p>Period: 1 year</p>
+        <p>Role: Administrative Assistant</p>
+        <p> Duties</p>
+        <ul>
+            <li> Answering Phone</li>
+            <li> Data Capturing</li>
+            <li> Correspondence</li>
+            <li> Supervising Classes</li>
+            <li> Stocktaking and packing</li>
+        </ul>
+        <h4>Contact Me</h4>
+        <p>Email: laeeqahesau@gmail.com</p>
+        <p>Contact Number: 063-776-0536</p>
+        <p>LinkedIn: http://www.linkedin.com/in/laeeqah-esau-78467a200/</p>
+        <p>GitHub: https://github.com/laeeqah</p> 
+       
     </div>
+    <h1>SKILL BAR</h1>
+        <div>
+            <div>
 
-    <h4>RESUME</h4>
-    <div class="my-resume">
-        <iframe src=""></iframe>
-    </div>
+            </div>
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
 
     <footer class="footer-decor">
 
