--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
+<!-- This my landing page -->
 <body>
     <div class="main-heading">
         <h1>Welcome I am Laeeqah Esau</h1>
