--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
-    <title>Home</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="main.css">
 </head>
 
+<!-- Project page -->
 <body>
     <div class="main-heading">
-        <h1>Projects</h1>
+        <h1>Some Of My Projects</h1>
         <h3>Get to know me better</h3>
     </div>
 
