--- a/testimonial.html
+++ b/testimonial.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
+<!-- Testimonials page -->
 <body>
     <div class="main-heading">
-        <h1>Testimonial</h1>
+        <h1>My Testimonials</h1>
         <h3>Get to know me better</h3>
     </div>
 
