--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
             <div class="project-info">
                 <img class="project-pic" src="images/weather-app.png" alt="project1">
                 <h3>Project 3: Weather App Challenge</h3>
-                <p>Weather app I had to create that will show the current weather with all the neccary details and with the help of the api.</p>
+                <p>Weather app I had to create that will show the current weather with all the necessary details and with the help of the api.</p>
                 <a href ="https://github.com/laeeqah/py-weather-task/blob/main/main.py">Link to my github Weather App</a>
             </div>
         </div>
