--- a/about.html
+++ b/about.html
@@ -35,39 +35,51 @@
             Watching my brother code during ockdown sparked my interest even more.
             I asked him to show me and right away I knew that was what I wanted to do.
         </p>
-        <h4>Education</h4>
-        <p>Matric 2018 - Rocklands High School</p>
-        <h4>Working Experience</h4>
-        <p>Company: Parkhurst Primary School</p>
-        <p>Period: 1 year</p>
-        <p>Role: Administrative Assistant</p>
-        <p> Duties</p>
-        <ul>
-            <li> Answering Phone</li>
-            <li> Data Capturing</li>
-            <li> Correspondence</li>
-            <li> Supervising Classes</li>
-            <li> Stocktaking and packing</li>
-        </ul>
-        <h4>Contact Me</h4>
-        <p>Email: laeeqahesau@gmail.com</p>
-        <p>Contact Number: 063-776-0536</p>
-        <p>LinkedIn: http://www.linkedin.com/in/laeeqah-esau-78467a200/</p>
-        <p>GitHub: https://github.com/laeeqah</p> 
-       
     </div>
-    <h1>SKILL BAR</h1>
-        <div>
-            <div>
-
+        <h1 class ="skills-heading">SKILL BAR</h1>
+        <div class = "skills-bar">  
+            <p>HTML</p>
+            <div class="bars">
+                <div class="skills html">90%</div>
             </div>
-            <div>
 
+            <p>CSS</p>
+            <div class="bars">
+                <div class="skills css">80%</div>
             </div>
-            <div>
 
+            <p>JavaScript</p>
+            <div class="bars">
+                <div class="skills js">40%</div>
+            </div>
+
+            <p>Python/Tkinter</p>
+            <div class="bar">
+                <div class="skills python-tkinter">50%</div>
             </div>
         </div>
+        <div class = "my-info">
+            <h4>Education</h4>
+            <p>Matric 2018 - Rocklands High School</p>
+            <h4>Working Experience</h4>
+            <p>Company: Parkhurst Primary School</p>
+            <p>Period: 1 year</p>
+            <p>Role: Administrative Assistant</p>
+            <p> Duties</p>
+            <ul>
+                <li> Answering Phone</li>
+                <li> Data Capturing</li>
+                <li> Correspondence</li>
+                <li> Supervising Classes</li>
+                <li> Stocktaking and packing</li>
+            </ul>
+            <h4>Contact Me</h4>
+            <p>Email: laeeqahesau@gmail.com</p>
+            <p>Contact Number: 063-776-0536</p>
+            <p>LinkedIn: http://www.linkedin.com/in/laeeqah-esau-78467a200/</p>
+            <p>GitHub: https://github.com/laeeqah</p> 
+        </div>
+   
 
     <footer class="footer-decor">
 
