--- a/testimonial.html
+++ b/testimonial.html
@@ -28,7 +28,7 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/godwin-dzvapatsra.jpg" alt="person1">
+                <img class="person-photo" src="images/landbackground.jpg" alt="person1">
             </div>
             <div class="flip-to-back">
                 <h1>Lecturer</h1>
@@ -39,7 +39,7 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/candice-amon.png" alt="person2">
+                <img class="person-photo" src="images/landbackground.jpg" alt="person2">
             </div>
             <div class="flip-to-back">
                 <h1>Candice</h1>
