--- a/testimonial.html
+++ b/testimonial.html
@@ -28,10 +28,11 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/landbackground.jpg" alt="person1">
+                <img class="person-photo" src="images/thapelo-tsotetsi.jpg" alt="person1">
             </div>
             <div class="flip-to-back">
-                <h1>Lecturer</h1>
+                <h1>Thapelo Tsotetsi</h1>
+                <h4>Lecturer</h4>
                 <p></p>
             </div>
         </div>
@@ -50,43 +51,52 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/unnamed.jpg" alt="person3">
+                <img class="person-photo" src="images/Alexander Maart (1).JPG" alt="person3">
             </div>
             <div class="flip-to-back">
-                <h1>peer1</h1>
-                <p></p>
+                <h1>Alexander Maart</h1>
+                <p>Laeeqah is very goal driven and eager to learn new things. She has a passion for web 
+                    development and design. She always make sure her work is done on time. She loves helping
+                    others any way she can.
+                </p>
             </div>
         </div>
     </div>
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/unnamed.jpg" alt="person3">
+                <img class="person-photo" src="images/Jody Beeton (1).JPG" alt="person3">
             </div>
             <div class="flip-to-back">
-                <h1>peer1</h1>
-                <p></p>
+                <h1>Jody Beeton</h1>
+                <p>Laeeqah is great collegue to work with, she is always easger to learn more and goes the extra
+                    mile to work effeciently as she is great at what she does. I highly recommend Laeeqahand I wouldn't to work
+                    with her in the future.
+                </p>
             </div>
         </div>
     </div>
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/unnamed.jpg" alt="person3">
+                <img class="person-photo" src="images/Mihlali Momoza (1).JPG" alt="person3">
             </div>
             <div class="flip-to-back">
-                <h1>peer1</h1>
-                <p></p>
+                <h1>Mihlali Momoza</h1>
+                <p>My experience with Laeeqah i can safely say that she's quiet and a self assertive individual, she proved herself to be a dependable candidate and a 
+                    hard worker with solid problem solving and technical skills. I was always impressed by Laeeqah’s ability to complete the work assigned to her on time. Laeeqah not only met deadlines 
+                    but also explains her programs in a way that non-experts can easily understand.
+                 </p>
             </div>
         </div>
     </div>
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/unnamed.jpg" alt="person3">
+                <img class="person-photo" src="images/sandile.png" alt="person3">
             </div>
             <div class="flip-to-back">
-                <h1>peer1</h1>
+                <h1>Sandile Tukani</h1>
                 <p></p>
             </div>
         </div>
@@ -110,10 +120,6 @@
         </div>
 
     </footer>
-</body>
-
-</html>
-
 </body>
 
 </html>
