--- a/testimonial.html
+++ b/testimonial.html
@@ -51,7 +51,7 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/Alexander Maart (1).JPG" alt="person3">
+                <img class="person-photo" src="images/Alexander-Maart.jpg" alt="person3">
             </div>
             <div class="flip-to-back">
                 <h1>Alexander Maart</h1>
@@ -65,7 +65,7 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/Jody Beeton (1).JPG" alt="person3">
+                <img class="person-photo" src="images/Jody-Beeton.jpg" alt="person3">
             </div>
             <div class="flip-to-back">
                 <h1>Jody Beeton</h1>
@@ -79,7 +79,7 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/Mihlali Momoza (1).JPG" alt="person3">
+                <img class="person-photo" src="images/Mihlali-Momoza.jpg" alt="person3">
             </div>
             <div class="flip-to-back">
                 <h1>Mihlali Momoza</h1>
@@ -93,11 +93,15 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/sandile.png" alt="person3">
+                <img class="person-photo" src="images/sandile-tukani.png" alt="person3">
             </div>
             <div class="flip-to-back">
                 <h1>Sandile Tukani</h1>
-                <p></p>
+                <p>Laeeqah is a hard-working young lady, focused on meeting her deadlines and goals.
+                    She is easy to work with, displays a lot of maturity and respect, 
+                    and clearly manages her work quite appropriately.
+                    Laeeqah usually displays ethical conduct, and focus, and you can't beat that.
+                </p>
             </div>
         </div>
     </div>
