--- a/testimonial.html
+++ b/testimonial.html
@@ -33,14 +33,16 @@
             <div class="flip-to-back">
                 <h1>Thapelo Tsotetsi</h1>
                 <h4>Lecturer</h4>
-                <p></p>
+                <p>Laeeqah is a quiet student. She is hard working and always gives in projects on time.
+                    She is always willing to help others whenever she can.
+                </p>
             </div>
         </div>
     </div>
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/landbackground.jpg" alt="person2">
+                <img class="person-photo" src="images/candice-amon.png" alt="person2">
             </div>
             <div class="flip-to-back">
                 <h1>Candice</h1>
