--- a/testimonial.html
+++ b/testimonial.html
@@ -33,7 +33,7 @@
             <div class="flip-to-back">
                 <h1>Thapelo Tsotetsi</h1>
                 <h4>Lecturer</h4>
-                <p>Laeeqah is a quiet student. She is hard working and always gives in projects on time.
+                <p>Laeeqah is a quiet student. She is hard working, dedicated and always gives in projects on time.
                     She is always willing to help others whenever she can.
                 </p>
             </div>
@@ -46,7 +46,10 @@
             </div>
             <div class="flip-to-back">
                 <h1>Candice</h1>
-                <p></p>
+                <h4>Facilitator</h4>
+                <p>Laeeqah is a very quiet and cooperative individual esspecially in group work. She puts alot of effort
+                    in teamwork and alone. She may seem shy but she is a very confident person.
+                </p>
             </div>
         </div>
     </div>
