--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-<!-- About page shows everything you nned to know about me -->
+<!-- About page shows everything you need to know about me -->
 <body>
     <div class="main-heading">
         <h1>Things About Me</h1>
@@ -32,7 +32,7 @@
             I am keen on learning new things everyday and I am dedicated
             and commited to anything that I am assigned to. I am very creative and love
             working on the computer.<br> I grew up with computers and was always fascinated by it
-            Watching my brother code during ockdown sparked my interest even more.
+            watching my brother code during lockdown sparked my interest even more.
             I asked him to show me and right away I knew that was what I wanted to do.
         </p>
     </div>
@@ -54,7 +54,7 @@
             </div>
 
             <p>Python/Tkinter</p>
-            <div class="bar">
+            <div class="bars">
                 <div class="skills python-tkinter">50%</div>
             </div>
         </div>
@@ -88,8 +88,8 @@
             <p class="footer-links">
                 <a class="link-1" href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="portfolio.html">portfolio</a>
-                <a href="testimonial.html">testimonial</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="testimonial.html">Testimonial</a>
                 <a href="contact.html">Contact</a>
                 <p>Cell number: 0637750536</p>
                 <p>Email Address: laeeqahesau@gmail.com</p>
