--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
+<!-- Contact page -->
+<!-- There is a contact form and information n how to contact me. -->
 <body>
     <div class="main-heading">
         <h1>Contact details</h1>
@@ -70,8 +72,8 @@
             <p class="footer-links ">
                 <a class="link-1 " href="index.html ">Home</a>
                 <a href="about.html ">About</a>
-                <a href="portfolio.html ">portfolio</a>
-                <a href="testimonial.html ">testimonial</a>
+                <a href="portfolio.html ">Portfolio</a>
+                <a href="testimonial.html ">Testimonial</a>
                 <a href="contact.html ">Contact</a>
                 <p>Cell number: 0637750536</p>
                 <p>Email Address: laeeqahesau@gmail.com</p>
