--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <!-- This my landing page -->
+
 <body>
     <div class="main-heading">
         <h1>Welcome I am Laeeqah Esau</h1>
@@ -46,8 +47,8 @@
             <p class="footer-links">
                 <a class="link-1" href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="portfolio.html">portfolio</a>
-                <a href="testimonial.html">testimonial</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="testimonial.html">Testimonial</a>
                 <a href="contact.html">Contact</a>
                 <p>Cell number: 0637750536</p>
                 <p>Email Address: laeeqahesau@gmail.com</p>
