--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
 </head>
 
 <!-- Project page -->
+<!-- The Projects will appear as cards -->
 <body>
     <div class="main-heading">
         <h1>Some Of My Projects</h1>
@@ -107,8 +108,8 @@
             <p class="footer-links">
                 <a class="link-1" href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="portfolio.html">portfolio</a>
-                <a href="testimonial.html">testimonial</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="testimonial.html">Testimonial</a>
                 <a href="contact.html">Contact</a>
                 <p>Cell number: 0637750536</p>
                 <p>Email Address: laeeqahesau@gmail.com</p>
