--- a/testimonial.html
+++ b/testimonial.html
@@ -9,6 +9,7 @@
 </head>
 
 <!-- Testimonials page -->
+<!-- The Testimonials will appear as flip cards, where they information is at the back -->
 <body>
     <div class="main-heading">
         <h1>My Testimonials</h1>
@@ -74,8 +75,8 @@
             </div>
             <div class="flip-to-back">
                 <h1>Jody Beeton</h1>
-                <p>Laeeqah is great collegue to work with, she is always easger to learn more and goes the extra
-                    mile to work effeciently as she is great at what she does. I highly recommend Laeeqahand I wouldn't to work
+                <p>Laeeqah is great collegue to work with, she is always eager to learn more and goes the extra
+                    mile to work effeciently as she is great at what she does. I highly recommend Laeeqah and I wouldn't mind to work
                     with her in the future.
                 </p>
             </div>
@@ -88,7 +89,7 @@
             </div>
             <div class="flip-to-back">
                 <h1>Mihlali Momoza</h1>
-                <p>My experience with Laeeqah i can safely say that she's quiet and a self assertive individual, she proved herself to be a dependable candidate and a 
+                <p>My experience with Laeeqah I can safely say that she's quiet and a self assertive individual, she proved herself to be a dependable candidate and a 
                     hard worker with solid problem solving and technical skills. I was always impressed by Laeeqah’s ability to complete the work assigned to her on time. Laeeqah not only met deadlines 
                     but also explains her programs in a way that non-experts can easily understand.
                  </p>
@@ -118,8 +119,8 @@
             <p class="footer-links">
                 <a class="link-1" href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="portfolio.html">portfolio</a>
-                <a href="testimonial.html">testimonial</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="testimonial.html">Testimonial</a>
                 <a href="contact.html">Contact</a>
                 <p>Cell number: 0637750536</p>
                 <p>Email Address: laeeqahesau@gmail.com</p>
