--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="links" href="contact.html">Contact</a>
     </nav>
 
-    <table>
+    <table class = "home-quote">
         <th>
             <div class = "right-side">
                 <img class ="next-to-quote" src = "images/myprofile.jpg">
