--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <th>
             <div class="quote-border">
                 <div class="quote">
-                    <p>Code is the future and so are we</p>
+                    <p>Code is the future and so am I</p>
                     <p>-Laeeqah</p>
                 </div>
             </div>
