--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     </div>
 
 
-    <!-- <h1>JAVASCRIPT</h1>
+    <h1>JAVASCRIPT</h1>
     <div class="row2">
         <div class="column">
             <div class="project-info">
@@ -60,7 +60,7 @@
 
             </div>
         </div>
-    </div> -->
+    </div>
 
     <h1>Python/Tkinter</h1>
     <div class="row3">
