--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
     <div class="outer-form">
         <div class="form-layout">
-            <form id="contact" class="contact" action="https://formspree.io/f/xdopygjr" meliod="POST">
+            <form id="contact" class="contact" action="https://formspree.io/f/xdopygjr" method="POST">
                 <h3>Contact Me</h3>
                 <h4>Put your details in.</h4>
                 <input class="form-input" name ="name" type="text" placeholder="Your name" required><br><br>
