--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <th>
             <div class="quote-border">
                 <div class="quote">
-                    <p>Code is the future and so am I</p>
-                    <p>-Laeeqah</p>
+                    <h3>Code is the future and so am I</h3>
+                    <h4>-Laeeqah</h4>
                 </div>
             </div>
         </th>
