--- a/testimonial.html
+++ b/testimonial.html
@@ -57,7 +57,7 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/Alexander-Maart.jpg" alt="person3">
+                <img class="person-photo" src="images/Alexander Maart-min.jpg" alt="person3">
             </div>
             <div class="flip-to-back">
                 <h1>Alexander Maart</h1>
@@ -71,7 +71,7 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/Jody-Beeton.jpg" alt="person3">
+                <img class="person-photo" src="images/Jody-Beeton-min.jpg" alt="person3">
             </div>
             <div class="flip-to-back">
                 <h1>Jody Beeton</h1>
@@ -85,7 +85,7 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/Mihlali-Momoza.jpg" alt="person3">
+                <img class="person-photo" src="images/Mihlali-Momoza-min.jpg" alt="person3">
             </div>
             <div class="flip-to-back">
                 <h1>Mihlali Momoza</h1>
