--- a/testimonial.html
+++ b/testimonial.html
@@ -57,7 +57,7 @@
     <div class="cards">
         <div class="flip-inside-card">
             <div class="flip-to-front">
-                <img class="person-photo" src="images/Alexander Maart-min.jpg" alt="person3">
+                <img class="person-photo" src="images/Alexander-Maart-min.jpg" alt="person3">
             </div>
             <div class="flip-to-back">
                 <h1>Alexander Maart</h1>
