--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         Hey! I'm <strong>Laeeqah Esau. I am a Junior Developer.</strong> I am a very pleasant and positive person who works well both independently as well as in a team.
             I am keen on learning new things everyday and I am dedicated
             and commited to anything that I am assigned to. I am very creative and love
-            working on the computer.<br> I grew up with computers and was always fascinated by it
+            working on the computer.<br> My passion came from with growing up with computers and was always fascinated by it
             watching my brother code during lockdown sparked my interest even more.
             I asked him to show me and right away I knew that was what I wanted to do.
         </p>
@@ -78,7 +78,7 @@
             <h2><span>My Skills</span></h2>
             <p>HTML</p>
         <div class="bars">
-            <div class="skills html">90%</div>
+            <div class="skills html">85%</div>
         </div>
 
         <p>CSS</p>
