--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
             <div class = "column-container2">
                 <div class="project-info"><a href = "https://github.com/laeeqah/py-temperatures-con/blob/main/main2.py">
                     <img class="project-pic" src="images/temp-con.png" alt="project1"></a>
-                    <h3>Project 1: Temperature Convertor</h3>
+                    <h3>Project 1: Temperature <br>Convertor</h3>
                 </div>
                 
                 <div class="project-info"><a href ="https://github.com/laeeqah/py-playing-sound">
@@ -66,13 +66,13 @@
 
                 <div class="project-info"><a href ="https://github.com/laeeqah/py-weather-task/blob/main/main.py">
                     <img class="project-pic" src="images/weather-app.png" alt="project1"></a>
-                    <h3>Project 3: Weather App Challenge</h3>
+                    <h3>Project 3: Weather App<br> Challenge</h3>
                 </div>
 
     
                 <div class="project-info"><a href ="https://github.com/laeeqah/py-eom-tkinter/blob/main/main.py">
                     <img class="project-pic" src="images/lotto.png" alt="project1"></a>
-                    <h3>Project 4: Lottery Number Challenge</h3>
+                    <h3>Project 4: Lottery <br>Number Challenge</h3>
                 </div>
             </div>
         </div>
