--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <table class = "home-quote">
         <th>
             <div class = "right-side">
-                <img class ="next-to-quote" src = "images/myprofile.jpg">
+                <img class ="next-to-quote" src = "images/myprofile-removebg-preview.png">
             </div>
         </th>
         <th>
