--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,11 @@
     <div class="row1">
         <div class="column">
             <h1><span>HTML AND CSS</span></h1>
-            <div class="project-info"><a href ="https://infallible-mahavira-364714.netlify.app">
-                <img class="project-pic" src="images/simplyanime.png" alt="project1"></a>
-                <h3>Project 1: My own Website</h3>
+            <div class ="column-container3">
+                <div class="project-info"><a href ="https://infallible-mahavira-364714.netlify.app">
+                    <img class="project-pic" src="images/simplyanime.png" alt="project1"></a>
+                    <h3>Project 1: My own Website</h3>
+                </div>
             </div>
         </div>
         <div class="column">
@@ -91,7 +93,6 @@
                 <p>Cell number: 0637750536</p>
                 <p>Email Address: laeeqahesau@gmail.com</p>
             </p>
-
             <p>Laeeqah Esau &copy; 2020</p>
         </div>
 
