--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 
 <!-- Contact page -->
-<!-- liere is a contact form and information n how to contact me. -->
+<!-- There is a contact form and information and how to contact me. -->
 <body>
     <div class="main-heading">
         <h1>Contact details</h1>
