--- a/testimonial.html
+++ b/testimonial.html
@@ -9,7 +9,7 @@
 </head>
 
 <!-- Testimonials page -->
-<!-- The Testimonials will appear as flip cards, where they information is at the back -->
+<!-- The Testimonials will appear as flip cards, where the information is on the back -->
 <body>
     <div class="main-heading">
       <h1>My Testimonials</h1>
