--- a/index.html
+++ b/index.html
@@ -14,31 +14,20 @@
     <div class="main-heading">
         <h1>Welcome I am Laeeqah Esau</h1>
         <h3>Get to know me better</h3>
-    </div>
-
-    <nav class="navbar">
-        <a class="links" href="index.html">Home</a>
-        <a class="links" href="about.html">About</a>
-        <a class="links" href="portfolio.html">Portfolio</a>
-        <a class="links" href="testimonial.html">Testimonial</a>
-        <a class="links" href="contact.html">Contact</a>
-    </nav>
-
-    <table class = "home-quote">
-        <th>
-            <div class = "right-side">
-                <img class ="next-to-quote" src = "images/myprofile-removebg-preview.png">
-            </div>
-        </th>
-        <th>
-            <div class="quote-border">
-                <div class="quote">
-                    <h3>Code is the future and so am I</h3>
-                    <h4>-Laeeqah</h4>
+        <table class = "home-quote">
+            
+            <th>
+                <div class="quote-border">
+                    <div class="quote">
+                        <h3>Code is the future and so am I</h3>
+                        <h4>-Laeeqah</h4>
+                    </div>
                 </div>
-            </div>
-        </th>
-    </table>
+            </th>
+        </table>
+
+        <a href = "about.html" id="view-btn">Know More</button></a>
+    </div>
 
     <footer class="footer-decor">
 
