--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <div class="form-layout">
             <form id="contact" class="contact" action="https://formspree.io/f/xdopygjr" method="POST">
                 <h3>Contact Me</h3>
-                <h4>Put your details in.</h4>
+                <h4>Get intouch with me.</h4>
                 <input class="form-input" name ="name" type="text" placeholder="Your name" required><br><br>
                 <input class="form-input" name ="surname" type="text" placeholder="Your Surname" required><br><br>
                 <input class="form-input" name ="cellnumber" type="text" placeholder="Your Phone Number" required><br><br>
