--- a/testimonial.html
+++ b/testimonial.html
@@ -43,12 +43,14 @@
     <div class="cards">
       <div class="flip-inside-card">
         <div class="flip-to-front">
-          <img class="person-photo" src="images/candice-amon.png" alt="person2">
+          <img class="person-photo" src="images/Isaiah-Lakey-min.JPG" alt="person2">
         </div>
         <div class="flip-to-back">
-          <h1>Candice</h1>
-          <h4>Facilitator</h4>
-          <p>
+          <h1>Isaiah Lakey</h1>
+          <h4>Peer</h4>
+          <p>Laeeqah is a hardworking individual. She strives in only giving her best to any challenge at hand. 
+            Her dedication and coding strength make her an asset to any company and a valuable member 
+            to have on your team.
           </p>
         </div>
       </div>
@@ -60,6 +62,7 @@
         </div>
         <div class="flip-to-back">
           <h1>Alexander Maart</h1>
+          <h4>Peer</h4>
           <p>Laeeqah is very goal driven and eager to learn new things. She has a passion for web 
               development and design. She always make sure her work is done on time. She loves helping
               others any way she can.
@@ -74,6 +77,7 @@
         </div>
         <div class="flip-to-back">
           <h1>Jody Beeton</h1>
+          <h4>Peer</h4>
           <p>Laeeqah is great collegue to work with, she is always eager to learn more and goes the extra
               mile to work effeciently as she is great at what she does. I highly recommend Laeeqah and I wouldn't mind to work
               with her in the future.
@@ -88,6 +92,7 @@
         </div>
         <div class="flip-to-back">
           <h1>Mihlali Momoza</h1>
+          <h4>Peer</h4>
           <p>My experience with Laeeqah I can safely say that she's quiet and a self assertive individual, she proved herself to be a dependable candidate and a 
               hard worker with solid problem solving and technical skills. I was always impressed by Laeeqah’s ability to complete the work assigned to her on time. Laeeqah not only met deadlines 
               but also explains her programs in a way that non-experts can easily understand.
@@ -102,6 +107,7 @@
         </div>
         <div class="flip-to-back">
           <h1>Sandile Tukani</h1>
+          <h4>Peer</h4>
           <p>Laeeqah is a hard-working young lady, focused on meeting her deadlines and goals.
               She is easy to work with, displays a lot of maturity and respect, 
               and clearly manages her work quite appropriately.
